New UI Reglas de negocio
New UI Reglas de negocio mas actualizacion title area

--- a/src/main/webapp/script/area/View.xhtml
+++ b/src/main/webapp/script/area/View.xhtml
@@ -9,7 +9,7 @@
 
     <ui:composition template="/script/template_inbox_bootstrap_config.xhtml">
         <ui:define name="title">
-            <p:outputLabel value="#{bundle.ViewAreaTitle}"/>
+            <h:outputText value="Ver área"></h:outputText>
         </ui:define>
         <ui:define name="help">
             <ui:include src="help.xhtml"/>
