--- a/src/main/webapp/script/reglaTrigger/Create.xhtml
+++ b/src/main/webapp/script/reglaTrigger/Create.xhtml
@@ -328,7 +328,7 @@
                         <br/>
                         <div class="form-group">
                             <label for="descripcion" class="control-label">#{bundle.CreateReglaTriggerLabel_desccripcion}</label>
-                            <h:inputTextarea styleClass="form-control" rows="2" cols="117" id="descripcion" 
+                            <h:inputTextarea style="width: 800px;" styleClass="form-control" rows="2" cols="117" id="descripcion" 
                                              value="#{reglaTriggerController.selected.desccripcion}" 
                                              title="#{bundle.CreateReglaTriggerTitle_desccripcion}" />
                         </div>
