Actualización titulos Rol
Actualización titulos Rol

--- a/src/main/webapp/script/rol/Create.xhtml
+++ b/src/main/webapp/script/rol/Create.xhtml
@@ -8,7 +8,7 @@
 
     <ui:composition template="/script/template_inbox_bootstrap_config.xhtml">
         <ui:define name="title">
-            <h:outputText value="#{bundle.CreateRolTitle}"></h:outputText>
+            <h:outputText value="Crear roles de usuario"></h:outputText>
         </ui:define>
         <ui:define name="help">
             <h:outputText escape="false" value="#{bundle.ayudaRoles}"/>
@@ -25,7 +25,7 @@
             <div class="page-header">
                 <div class="row">
                     <div class="col-sm-6 col-xs-12">
-                        <h1><i style="font-size: small;" class="fa fa-plus"/> <i class="fa fa-key page-header-icon"></i>&nbsp;&nbsp;#{bundle.CreateRolTitle}</h1>
+                        <h1><i style="font-size: small;" class="fa fa-plus"/> <i class="fa fa-key page-header-icon"></i>&nbsp;&nbsp;Crear nuevo rol</h1>
                         <p:commandLink title="Help" onclick="PF('helpDialog').show()" styleClass="text-info" >
                             <i class="fa fa-info-circle"/>
                         </p:commandLink> 
