--- a/src/main/webapp/script/rol/Edit.xhtml
+++ b/src/main/webapp/script/rol/Edit.xhtml
@@ -25,7 +25,7 @@
             <div class="page-header">
                 <div class="row">
                     <div class="col-sm-6 col-xs-12">
-                        <h1><i class="fa fa-key page-header-icon"></i>&nbsp;&nbsp;#{bundle.EditRolTitle}: #{rolController.selected.idRol}</h1>
+                        <h1><i class="fa fa-key page-header-icon"></i>&nbsp;&nbsp;Editar rol: #{rolController.selected.idRol}</h1>
                         <p:commandLink title="Help" onclick="PF('helpDialog').show()" styleClass="text-info" >
                             <i class="fa fa-info-circle"/>
                         </p:commandLink> 
