--- a/src/main/webapp/script/rol/View.xhtml
+++ b/src/main/webapp/script/rol/View.xhtml
@@ -8,7 +8,7 @@
 
     <ui:composition template="/script/template_inbox_bootstrap_config.xhtml">
         <ui:define name="title">
-            <h:outputText value="#{bundle.ViewRolTitle}"></h:outputText>
+            <h:outputText value="Ver rol"></h:outputText>
         </ui:define>
         <ui:define name="help">
             <h:outputText escape="false" value="#{bundle.ayudaRoles}"/>
@@ -25,7 +25,7 @@
             <div class="page-header">
                 <div class="row">
                     <div class="col-sm-6 col-xs-12">
-                        <h1><i class="fa fa-key page-header-icon"></i>&nbsp;&nbsp;Detalles de Rol: #{rolController.selected.idRol}</h1>
+                        <h1><i class="fa fa-key page-header-icon"></i>&nbsp;&nbsp;Detalles de rol: #{rolController.selected.idRol}</h1>
                         <p:commandLink title="Help" onclick="PF('helpDialog').show()" styleClass="text-info" >
                             <i class="fa fa-info-circle"/>
                         </p:commandLink> 
