--- a/src/main/webapp/script/clipping/Create.xhtml
+++ b/src/main/webapp/script/clipping/Create.xhtml
@@ -85,9 +85,10 @@
                                            styleClass="btn btn-default btn-flat" 
                                            action="#{clippingController.prepareList()}" 
                                            onclick="jQuery(this).addClass('ui-state-disabled');
+                                                   jQuery(this).children().removeClass('fa fa-chevron-left');
                                                    jQuery(this).children().addClass('fa fa-refresh fa-spin')">
                                 <p:resetInput target="@form" />
-                                <i class=""></i> #{bundle.Cancel}
+                                <i class="fa fa-chevron-left"></i> Volver
                             </p:commandLink>
 
                         </div>
@@ -97,8 +98,9 @@
                                            ajax="false"
                                            styleClass="btn btn-primary btn-flat" 
                                            onclick="jQuery(this).addClass('ui-state-disabled');
+                                                   jQuery(this).children().removeClass('fa fa-save');
                                                    jQuery(this).children().addClass('fa fa-refresh fa-spin')">
-                                <i class=""></i> #{bundle.CreateClippingSaveLink}
+                                <i class="fa fa-save"></i> #{bundle.CreateClippingSaveLink}
                             </p:commandLink>
                         </div>
 
@@ -106,7 +108,7 @@
 
                     <div class="col-sm-6 col-lg-6">
 
-                       
+
 
                         <h:outputText styleClass="text-primary" value="Utilice marcadores de posición para insertar información (del caso) usada con frecuencia fácilmente en el texto. Copie el marcador y péguelo en el area de texto de la Respuesta Predefinida."/>
 
