--- a/src/main/webapp/script/clipping/Edit.xhtml
+++ b/src/main/webapp/script/clipping/Edit.xhtml
@@ -85,9 +85,10 @@
                                            styleClass="btn btn-default btn-flat" 
                                            action="#{clippingController.prepareList()}" 
                                            onclick="jQuery(this).addClass('ui-state-disabled');
+                                                   jQuery(this).children().removeClass('fa fa-chevron-left');
                                                    jQuery(this).children().addClass('fa fa-refresh fa-spin')">
                                 <p:resetInput target="@form" />
-                                <i class=""></i> #{bundle.Cancel}
+                                <i class="fa fa-chevron-left"></i> Volver
                             </p:commandLink>
 
                         </div>
@@ -97,8 +98,9 @@
                                            ajax="false"
                                            styleClass="btn btn-primary btn-flat" 
                                            onclick="jQuery(this).addClass('ui-state-disabled');
+                                               jQuery(this).children().removeClass('fa fa-save');
                                                    jQuery(this).children().addClass('fa fa-refresh fa-spin')">
-                                <i class=""></i> #{bundle.EditClippingSaveLink}
+                                <i class="fa fa-save"></i> #{bundle.EditClippingSaveLink}
                             </p:commandLink>
                         </div>
 
