--- a/src/main/webapp/script/vista/Create.xhtml
+++ b/src/main/webapp/script/vista/Create.xhtml
@@ -7,11 +7,11 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:go="http://java.sun.com/jsf/composite/go">
 
-    <ui:composition template="/script/template_inbox_bootstrap_config.xhtml">
+    <ui:composition template="/script/template_inbox_bootstrap.xhtml">
         <ui:define name="title">
             <h:outputText value="#{bundle.CreateVistaTitle}"></h:outputText>
         </ui:define>
-        <ui:define name="west">
+        <ui:define name="help">
             <p:panel>
                 <h:outputLabel escape="false" value="Las vistas reúnen un grupo de casos según un conjunto de criterios que 
                                expresan una variedad de estados del caso como, por ejemplo, Nuevo, En proceso o Solucionado. 
