--- a/src/main/webapp/script/vista/Edit.xhtml
+++ b/src/main/webapp/script/vista/Edit.xhtml
@@ -7,12 +7,12 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:go="http://java.sun.com/jsf/composite/go">
 
-    <ui:composition template="/script/template_inbox_bootstrap_config.xhtml">
+    <ui:composition template="/script/template_inbox_bootstrap.xhtml">
         <ui:define name="title">
             <h:outputText value="#{bundle.EditVistaTitle}"></h:outputText>
         </ui:define>
 
-        <ui:define name="west">
+        <ui:define name="help">
             <p:panel>
                 <h:outputLabel escape="false" value="Las vistas reúnen un grupo de casos según un conjunto de criterios que 
                                expresan una variedad de estados del caso como, por ejemplo, Nuevo, En proceso o Solucionado. 
@@ -27,6 +27,10 @@
                     $('body').addClass('mmc');
                 });
             </script>
+
+        </ui:define>
+
+        <ui:define name="body">
             <!-- page-header -->
             <div class="page-header">
                 <div class="row">
@@ -39,9 +43,6 @@
 
                 </div>
             </div><!-- / .page-header --> 
-        </ui:define>
-
-        <ui:define name="body">
 
             <h:form id="form">
                 <p:messages id="messages"/>
@@ -102,18 +103,18 @@
                                            styleClass="btn btn-default btn-flat" 
                                            ajax="false" immediate="true"
                                            onclick="jQuery(this).addClass('ui-state-disabled');
-                                               jQuery(this).children().removeClass('fa fa-chevron-left');
+                                                   jQuery(this).children().removeClass('fa fa-chevron-left');
                                                    jQuery(this).children().addClass('fa fa-refresh fa-spin')">
                                 <i class="fa fa-chevron-left"></i> #{bundle.goBack}
                             </p:commandLink>
                         </div>
-                        
+
                         <div class="btn-group">
                             <p:commandLink action="View" 
                                            ajax="false"
                                            styleClass="btn btn-primary btn-flat" 
                                            onclick="jQuery(this).addClass('ui-state-disabled');
-                                               jQuery(this).children().removeClass('fa fa-eye');
+                                                   jQuery(this).children().removeClass('fa fa-eye');
                                                    jQuery(this).children().addClass('fa fa-refresh fa-spin')">
                                 <i class="fa fa-eye"></i> Ver
                             </p:commandLink>
@@ -124,7 +125,7 @@
                                            ajax="false" update=":mainform:messages"
                                            styleClass="btn btn-primary btn-flat" 
                                            onclick="jQuery(this).addClass('ui-state-disabled');
-                                               jQuery(this).children().removeClass('fa fa-save');
+                                                   jQuery(this).children().removeClass('fa fa-save');
                                                    jQuery(this).children().addClass('fa fa-refresh fa-spin')">
                                 <i class="fa fa-save"></i> Guardar
                             </p:commandLink>
