--- a/src/main/webapp/script/vista/List.xhtml
+++ b/src/main/webapp/script/vista/List.xhtml
@@ -169,6 +169,12 @@
                             <f:facet name="header">
                                 <h:outputText value="Acci&oacute;n"/>
                             </f:facet>
+                            <!--<p:commandLink id="viewBtn" action="{vistaController.prepareView(item)}"
+                                           title="Ver" ajax="false"
+                                           styleClass="btn btn-sm btn-outline btn-default"
+                                           >
+                                <i class="fa fa-eye"/>
+                            </p:commandLink>-->
                             <p:commandLink ajax="false" action="#{vistaController.prepareEdit(item.idVista)}" title="Editar" immediate="true"
                                            rendered="#{filtroAcceso.verificarAccesoAFuncionAdministrarVistas() and (item.idUsuarioCreadaPor eq UserSessionBean.current or filtroAcceso.administradorDelSistema)}" 
                                            styleClass="btn btn-sm btn-outline btn-primary"
