fix height texto view clipping
fix height texto view clipping

--- a/src/main/webapp/script/clipping/View.xhtml
+++ b/src/main/webapp/script/clipping/View.xhtml
@@ -50,7 +50,7 @@
                         </div>
                         <div class="form-group">
                             <label for="clippingText" class="control-label">Texto de respuesta predefinida</label>
-                            <h:outputText style="width: 750px; height: 200px;" id="clippingText" value="#{clippingController.selected.texto}" 
+                            <h:outputText style="width: 750px; height: auto;" id="clippingText" value="#{clippingController.selected.texto}" 
                                           styleClass="form-control noupdate"
                                           title="#{bundle.ViewClippingTitle_texto}"/>
                         </div>
