--- a/src/main/webapp/script/template_inbox.xhtml
+++ b/src/main/webapp/script/template_inbox.xhtml
@@ -386,7 +386,8 @@
                                 <f:facet name="options">
                                     <p:ajaxStatus style="position: absolute; top: 10px; right: 110px;">
                                         <f:facet name="start">
-                                            <p:graphicImage library="images" name="ajax-loader_red.gif" />
+                                            <h:outputText value="Working..."/>
+                                            <p:graphicImage library="images" name="ajaxloadingbar.gif" />
                                         </f:facet>
                                     </p:ajaxStatus>
                                     <div align="right" >
