resolve conflict crear area
resolve conflict crear area

--- a/src/main/webapp/script/area/Create.xhtml
+++ b/src/main/webapp/script/area/Create.xhtml
@@ -99,7 +99,7 @@
                         <i class="fa fa-save"></i> #{bundle.CreateAreaSaveLink}
                     </p:commandLink>
                 </div>
-
+            </h:form>
         </ui:define>
     </ui:composition>
 
